--- a/app/src/main/res/layout/fragment_mensajes.xml
+++ b/app/src/main/res/layout/fragment_mensajes.xml
@@ -5,10 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".fragments.mensajes">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        <ListView
+            android:id="@+id/messageList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp" />
 
 </FrameLayout>
