--- a/app/src/main/res/layout/calendario_activity.xml
+++ b/app/src/main/res/layout/calendario_activity.xml
@@ -9,7 +9,8 @@
     <CalendarView
         android:id="@+id/calendar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"/>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnv_calendario"
