--- a/app/src/main/res/layout/fragment_mensajes.xml
+++ b/app/src/main/res/layout/fragment_mensajes.xml
@@ -5,6 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragments.mensajes">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <ListView
             android:id="@+id/messageList"
             android:layout_width="match_parent"
@@ -13,5 +17,7 @@
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp" />
+
+    </ScrollView>
 
 </FrameLayout>
