--- a/app/src/main/res/layout/fragment_notificaciones.xml
+++ b/app/src/main/res/layout/fragment_notificaciones.xml
@@ -5,23 +5,27 @@
     android:layout_height="match_parent"
     tools:context=".fragments.notificaciones">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
-            android:id="@+id/notificationList"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="600dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="0dp" />
-        
-    </RelativeLayout>
+            android:layout_height="match_parent">
 
+            <ListView
+                android:id="@+id/notificationList"
+                android:layout_width="match_parent"
+                android:layout_height="600dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginBottom="0dp" />
+
+        </RelativeLayout>
+    </ScrollView>
 </FrameLayout>
