--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -37,7 +37,7 @@
                 android:layout_marginTop="32dp">
 
                 <TextView
-                    android:id="@+id/txt_dateInput"
+                    android:id="@+id/tv_fechamenu"
                     android:layout_width="250dp"
                     android:layout_height="match_parent"
                     android:hint="@string/edtext_datein"
@@ -58,7 +58,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="509dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <Button
@@ -76,13 +76,13 @@
                     android:layout_marginTop="15dp"
                     android:text="Platillos disponibles"
                     android:textSize="15sp" />
-
-                <ListView
-                    android:id="@+id/ltv_comidadisponible"
-                    android:layout_width="match_parent"
-                    android:layout_height="456dp"
-                    android:layout_marginTop="15dp" />
             </LinearLayout>
+
+            <ListView
+                android:id="@+id/ltv_comidadisponible"
+                android:layout_width="match_parent"
+                android:layout_height="433dp"
+                android:layout_marginTop="15dp" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
