--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,17 @@
     <color name="oscuro">#242424</color>
     <color name="black_overlay">#66000000</color>
     <color name="atarraya">#2271b3</color>
+    <color name="colorPrimary_2">#FFC107</color>
+    <color name="colorPrimaryDark_2">#FFA000</color>
+    <color name="backgroundcolor">#fcfcfc</color>
+    <color name="lightgray">#ededed</color>
+    <color name="deeppurple">#7c4dff</color>
+    <color name="yello">#ffb300</color>
+    <color name="green">#00bfa5</color>
+    <color name="colorAccent_2">#FF4081</color>
+    <color name="darkblue">#23283a</color>
+    <color name="testcolorblue">#152b38</color>
+    <color name="pink">#fe104d</color>
+
+    <color name="black_overlay_2">#66000000</color>
 </resources>
